docs/7.52/md/abenmove_exact_elementary_valid.md
---
title: "Valid Values for Lossless Assignments"
description: |
  When a lossless conversion of an elementary argument of the operator EXACT(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconstructor_expression_exact.htm) to an incompatible data type is performed, the argument must represent a value that is valid in the tables below (and accordin
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmove_exact_elementary_valid.htm"
abapFile: "abenmove_exact_elementary_valid.htm"
keywords: ["do", "if", "class", "data", "types", "abenmove", "exact", "elementary", "valid"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Assignments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenvalue_assignments.htm) →  [Lossless Assignments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenlossless_move.htm) →  [Lossless Assignments - Rules](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapmove_exact.htm) →  [Checking Elementary Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmove_exact_elementary.htm) → 

Valid Values for Lossless Assignments

When a lossless conversion of an elementary argument of the operator [EXACT](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconstructor_expression_exact.htm) to an incompatible data type is performed, the argument must represent a value that is valid in the tables below (and according to its data type).

-   [Numeric Arguments](#abenmove-exact-elementary-valid-1--------character-like-arguments---@ITOC@@ABENMOVE_EXACT_ELEMENTARY_VALID_2)

-   [Byte-Like Arguments](#abenmove-exact-elementary-valid-3--------date-time-fields-as-arguments---@ITOC@@ABENMOVE_EXACT_ELEMENTARY_VALID_4)

Numeric Arguments

Argument

Valid Values

i, int8, (b, s)

All content is valid.

decfloat16, decfloat34

All values resulting from assignments and calculations in ABAP are valid. The special values that indicate infinity or invalid numbers are invalid. Invalid values raise an exception from the class CX\_SY\_CONVERSION\_NO\_NUMBER.

p

All values resulting from assignments and calculations in ABAP are valid. If, however, the type has more decimal places than available places, this type is always invalid. (This means that the last half byte can contain only the hexadecimal values "A", "C", "E", or "F", for a positive sign, or "B" or "D" for a negative sign. The remaining half bytes can contain only the hexadecimal values "0" to "9".) If, however, the type has more decimal places than available places, this type is always invalid. Invalid values raise an exception from the class CX\_SY\_CONVERSION\_NO\_NUMBER.

f

Integers with a maximum of 15 places.

Note

Decimal numbers with decimal places cannot generally be represented precisely by binary floating point numbers of type f. The operator EXACT therefore restricts the valid value range to integers with a maximum of 15 places.

Example

The second lossless assignment raises an exception, caused by the attempt to convert a number with decimal places.

DATA arg TYPE f.
arg = 123.
DATA(result1) = EXACT i( arg ).
arg = '123.456'.
DATA(result2) = EXACT i( arg ).

Character-Like Arguments

Argument

Valid Values

c, string

All content is valid. No check is made to determine whether a byte or string of bytes contains valid characters for the current code page.

n

The argument can contain the digits "0" to "9" only. Invalid values raise an exception from the class CX\_SY\_CONVERSION\_NO\_NUMBER.

Example

The second lossless assignment raises an exception because numtext does not contain a valid value.

DATA numtext TYPE n LENGTH 6.
DATA time TYPE t.
numtext = time = '115500'.
DATA(result1) = EXACT string( numtext ).
numtext = time = '1155\_\_'.
DATA(result2) = EXACT string( numtext ).

Byte-Like Arguments

Argument

Valid Values

x, xstring

All content is valid.

Example

The lossless assignment does not raise an exception for any of the randomly generated byte strings.

DATA hex TYPE x LENGTH 1.
DATA(rnd) = cl\_abap\_random\_int=>create(
  seed = CONV i( sy-uzeit ) min = 0 max = 1 ).
DO 8 TIMES.
  SET BIT sy-index OF hex TO rnd->get\_next( ).
ENDDO.
DATA(result) = EXACT string( hex ).

Date/Time Fields as Arguments

Argument

Valid Values

d

The argument must contain a valid date in the format "yyyymmdd", for which the following values are permitted: "yyyy" (year): 0001 to 9999, "mm" (month): 01 to 12, "dd" (day): 01 to 31. In addition, the initial value "00000000" is considered a valid date, whereas "00010101" is not considered a valid date. The smallest valid value that corresponds to a day is "00010102". The values "15821005" to "15821014" are also invalid. This is because of the switch from the Julian to the Gregorian calendar, where 04.10.1582 is followed directly by 15.10.1582. Invalid values raise an exception from the class CX\_SY\_CONVERSION\_NO\_DATE.

t

The argument must contain a valid time in the format "hhmmss", for which the following values are permitted: "hh" (hours): 00 to 23, "mm" (minutes): 01 to 59, "ss" (seconds): 01 to 59. Invalid values raise an exception from the class CX\_SY\_CONVERSION\_NO\_TIME.

Note

The values that the operator EXACT permits for date fields of type d are different from those defined by the [value range](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuiltin_types_date_time.htm). The initial value "00000000", which does not lie within the value range and is normally considered an invalid date, is considered a valid date here, whereas the value "00010101", which does lie within the value range, is considered invalid.

Example

The second lossless assignment raises an exception because date does not contain a valid value.

DATA date TYPE d.
date = '20160729'.
DATA(result1) = EXACT i( date ).
date = '201607\_\_'.
DATA(result2) = EXACT i( date ).